<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/log_activity_horizontal_margin"
    android:paddingVertical="@dimen/log_activity_vertical_margin"
    tools:context=".ui.LogPagingFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/log_button_height"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_select_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/log_common_button_ripple"
            android:backgroundTint="@color/log_common_button_tint"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/select_log_file"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/log_parser_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/log_common_margin"
            android:layout_weight="1"
            android:background="@drawable/log_common_button_ripple"
            android:backgroundTint="@color/log_common_button_tint"
            android:popupBackground="@color/log_button_color"
            android:spinnerMode="dropdown"
            android:text="@string/select_log_parser"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/log_level_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/log_common_margin"
            android:layout_weight="1"
            android:background="@drawable/log_common_button_ripple"
            android:backgroundTint="@color/log_common_button_tint"
            android:popupBackground="@color/log_button_color"
            android:spinnerMode="dropdown"
            android:text="@string/select_log_level"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/log_decoder_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/log_common_margin"
            android:layout_weight="1"
            android:background="@drawable/log_common_button_ripple"
            android:backgroundTint="@color/log_common_button_tint"
            android:popupBackground="@color/log_button_color"
            android:spinnerMode="dropdown"
            android:text="@string/select_log_decoder"
            android:textColor="@android:color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/log_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/log_button_height"
        android:layout_marginTop="@dimen/log_common_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/log_loading_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:progress="50" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_cancel_loading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/log_common_margin"
            android:background="@drawable/log_common_button_ripple"
            android:backgroundTint="@color/log_common_button_tint"
            android:button="@null"
            android:gravity="center"
            android:text="@string/cancel_log_loading"
            android:textColor="@android:color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        android:id="@+id/log_search_layout"
        layout="@layout/log_search_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/log_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</androidx.appcompat.widget.LinearLayoutCompat>
